# bmp2hex

./: README.md
bmp2hex/: main.c
clion-sfml-template/: CMakeLists.txt
iniparser/: README.md
iniparser/sources/: inifile.cpp  key.cpp  load.cpp  save.cpp  section.cpp  value.cpp
